# vctrsKL

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CellMap.cu  CellMap.hpp  CellMapConstructing.cu  CellMapConstructing.hpp  ColorConversion.cpp  ColorConversion.hpp  Constants.hpp  CrossingResolving.h  CurveControlPointExcluding.cu  CurveControlPointExcluding.hpp  CurveControlPointSmoothing.cu  CurveControlPointSmoothing.hpp  CurveCurvature.hpp  CurveOptimizer.cu  CurveOptimizer.hpp  GraphConstructing.cu  GraphConstructing.hpp  GraphCrossResolving.cu  GraphCrossResolving.hpp  ImageColorizer.cpp  ImageColorizer.hpp  ImageComponentIdentifier.cpp  ImageComponentIdentifier.hpp  ImageComponentLabeling.cu  ImageComponentLabeling.hpp  ImageData.cpp  ImageData.cu  ImageData.hpp  PixelGraph.cu  PixelGraph.hpp  PixelGraphInfo.cu  PixelGraphInfo.hpp  PolygonSide.cpp  PolygonSide.hpp  PolygonSideMap.cpp  PolygonSideMap.hpp  PolygonSideMapConstructing.cu  PolygonSideMapConstructing.hpp  RegionConstructor.cpp  (+1 more)
src/external-lodepng/: CMakeLists.txt  README.md
src/utils/: CMakeLists.txt  imgTimeMeasuring.cpp  polygonDrawing.cpp  prototypeCurveDrawing.cpp  regionDrawing.cpp  unoptimCurveDrawing.cpp  vctrsKL.cpp
test/: CMakeLists.txt  CellMapTest.cpp  ColorConversionTest.cpp  ImageDataTest.cpp  PixelGraphTest.cpp  PolygonSideMapTest.cpp  googletest
