add_subdirectory(external-lodepng)
include_directories(external-lodepng)

cuda_add_library(ImageComponentLabeling ImageComponentLabeling.cu)
cuda_add_library(ImageComponentIdentifier ImageComponentIdentifier.cpp)
cuda_add_library(ImageData ImageData.cu)
target_link_libraries(ImageData lodepng ImageComponentIdentifier ImageComponentLabeling)

cuda_add_library(GraphConstructing GraphConstructing.cu)
cuda_add_library(GraphCrossResolving GraphCrossResolving.cu)

cuda_add_library(PixelGraph PixelGraph.cu)
target_link_libraries(PixelGraph GraphConstructing GraphCrossResolving ImageData)

cuda_add_library(CellMapConstructing CellMapConstructing.cu)
cuda_add_library(CellMap CellMap.cu RegionConstructor.cpp)
target_link_libraries(CellMap PixelGraph CellMapConstructing)

add_subdirectory(utils)