add_subdirectory(external-lodepng)
include_directories(external-lodepng)

cuda_add_library(ImageComponentLabeling ImageComponentLabeling.cu)
cuda_add_library(ImageComponentIdentifier ImageComponentIdentifier.cpp)
cuda_add_library(ImageData ImageData.cu)
target_link_libraries(ImageData lodepng ImageComponentIdentifier ImageComponentLabeling)

cuda_add_library(GraphConstructing GraphConstructing.cu)
cuda_add_library(GraphCrossResolving GraphCrossResolving.cu)

cuda_add_library(PixelGraph PixelGraph.cu)
target_link_libraries(PixelGraph GraphConstructing GraphCrossResolving ImageData)

add_library(PolygonSide PolygonSide.cpp)
cuda_add_library(PolygonSideMapConstructing PolygonSideMapConstructing.cu)
target_link_libraries(PolygonSideMapConstructing PolygonSide)

find_package(PkgConfig)
pkg_search_module(CLIPPER REQUIRED polyclipping)
include_directories(${CLIPPER_INCLUDE_DIRS})

add_library(RegionConstructor RegionConstructor.cpp)
target_link_libraries(RegionConstructor ${CLIPPER_LIBRARIES})
add_library(PolygonSideMap PolygonSideMap.cpp)
target_link_libraries(PolygonSideMap PixelGraph PolygonSideMapConstructing RegionConstructor)

cuda_add_library(CurveControlPointSmoothing CurveControlPointSmoothing.cu)
cuda_add_library(CurveOptimizer CurveOptimizer.cu)
target_link_libraries(CurveOptimizer PolygonSideMap CurveControlPointSmoothing)

add_subdirectory(utils)