include_directories(${CMAKE_SOURCE_DIR}/src/)

add_executable(utilImgTimeMeasuring imgTimeMeasuring.cpp)
target_link_libraries(utilImgTimeMeasuring CurveOptimizer ImageColorizer)

add_executable(utilDrawRegions regionDrawing.cpp)
target_link_libraries(utilDrawRegions PolygonSideMap)

add_executable(utilDrawPrototypeCurves prototypeCurveDrawing.cpp)
target_link_libraries(utilDrawPrototypeCurves CurveOptimizer ImageColorizer)